--- a/p2/Vagrantfile
+++ b/p2/Vagrantfile
@@ -3,12 +3,12 @@
 
 machines=[
   {
-    :hostname => "iaschneiS",
+    :hostname => "nmunirS",
     :ip => "192.168.56.110",
     :box => "generic/debian12",
     :ram => 2048,
     :cpu => 2,
-    :script => "./scripts/iaschneiS_provision.sh"
+    :script => "./scripts/nmunirS_provision.sh"
   }
 ]
 
